fix: use space-evenly for equal footer column spacing

--- a/website/src/components/Footer/Footer.module.scss
+++ b/website/src/components/Footer/Footer.module.scss
@@ -93,7 +93,7 @@
     align-items: flex-start;
     flex-direction: row;
     gap: 30px;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 
   @media (min-width: 1400px) {
